tests/ui/coherence/indirect-impl-for-trait-obj-coherence.next.stderr
error: hi
  --> $DIR/indirect-impl-for-trait-obj-coherence.rs:15:1
   |
LL | trait Object<U> {
   | --------------- built-in `dyn Object<_, Output = _>` implementation for this trait
...
LL | impl<T: ?Sized, U> Object<U> for T {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ overlaps with this blanket impl
   |
   = note: `#[forbid(dyn_overlap)]` on by default

error[E0284]: type annotations needed: cannot normalize `<dyn Object<U, Output = T> as Object<U>>::Output`
  --> $DIR/indirect-impl-for-trait-obj-coherence.rs:25:41
   |
LL |     foo::<dyn Object<U, Output = T>, U>(x)
   |                                         ^ cannot normalize `<dyn Object<U, Output = T> as Object<U>>::Output`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0284`.
